Fixed bugs 1. scroll not coming back after closing image modal 2. Small image containers before images load causing observer to trigger and fetch more photos even though user hasn't scrolled yet. 3. image modal getting out of screen when height is too small, it had fixed height. 4. fetch function trying to spread data when it's undefined making it crash. New feature content no longer shifts when opening an image.

--- a/components/imageCard/index.module.css
+++ b/components/imageCard/index.module.css
@@ -1,16 +1,18 @@
 .imageWrapper {
   position: relative;
   cursor: pointer;
-  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: var(--themeSecondary);
 }
 .imageWrapper:focus-visible {
   box-shadow: 0px 0px 3px 3px var(--accent);
 }
 .imageWrapper img {
   object-fit: cover;
-  width: 100%;
   height: 100%;
-  background-color: rgb(68, 68, 68);
+  width: 100%;
 }
 
 .favBtnPosition {
