--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,11 +1,18 @@
 .gallery {
+  flex-grow: 1;
   grid-gap: 25px;
   margin-left: 110px;
   margin-top: 25px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+}
+.heightLimit {
+  min-height: 100vh !important;
 }
 .cardsWrapper {
+  max-width: 600px;
+  max-height: 1280px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -17,6 +24,7 @@
   color: var(--text-color);
   font-size: 26px;
   margin: 40px auto;
+  grid-column: 1/-1;
 }
 @media screen and (max-width: 768px) {
   .gallery {
